--- a/trunk/potassco_guide/guide.tex
+++ b/trunk/potassco_guide/guide.tex
@@ -8,7 +8,7 @@
 \usepackage{listings}
 \usepackage[dvipsnames]{xcolor}
 \usepackage[pdfborder={0 0 0},pagebackref=true]{hyperref}
-%% \usepackage{comments}
+\usepackage{comments}
 \usepackage{pict2e}
 \usepackage{tikz}
 \usetikzlibrary{arrows,chains,positioning,automata,decorations,shapes}
