--- a/trunk/potassco_guide/errors.tex
+++ b/trunk/potassco_guide/errors.tex
@@ -49,7 +49,7 @@ It indicates that option \code{--help} can be used to display the available opti
 
 \subsubsection{Parsing and Checking Logic Programs}\label{subsec:error:parselp}
 
-Next, we consider errors emitted durnig the parsing and checking of logic programs.
+Next, we consider errors emitted during the parsing and checking of logic programs.
 Unlike the error messages in the previous section, 
 such errors include location information to ease finding and fixing the problem.
 Each of the error messages below begins with a location followed by the string \code{error} and a short description of the error in~\codeit{Message}:
